[package]
name = "issue-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
confy = "0.5.1"
dialoguer = "0.10.3"
indicatif = "0.17.3"
reqwest = { version = "0.11.14", features = ["serde_json", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
webbrowser = "0.8.7"
